--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "startnow-ops200-webpack-workshop",
+  "name": "webpack",
   "version": "1.0.0",
   "description": "webpack workshop",
   "main": "server.js",
@@ -19,34 +19,33 @@
   },
   "homepage": "https://github.com/OriginCodeAcademy/startnow-ops200-webpack-workshop#readme",
   "dependencies": {
-    "axios": "^0.16.1",
+    "axios": "^0.23.0",
     "babel": "^6.3.26",
-    "babel-preset-airbnb": "^1.0.1",
-    "babel-register": "^6.4.3",
     "babel-loader": "^7.1.1",
+    "babel-preset-airbnb": "^1.0.1",
     "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.4.3",
     "bluebird": "^3.5.0",
     "chai": "^3.5.0",
     "debug": "^2.6.8",
     "express": "^4.15.4",
     "jquery": "^3.2.1",
+    "jQuery": "^1.7.4",
     "json-loader": "^0.5.4",
     "lodash": "^4.15.0",
     "lodash-webpack-plugin": "^0.10.2",
     "morgan": "^1.8.2",
-    "nightmare": "^3.0.1",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "serve-favicon": "^2.0.1",
-    "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.3"
+    "nightmare": "^2.8.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "serve-favicon": "^2.0.1"
   },
   "devDependencies": {
     "axios-mock-adapter": "^1.6.1",
     "chai-as-promised": "^5.3.0",
-    "chai-http": "^3.0.0",
+    "chai-http": "^4.3.0",
     "csx": "^4.0.0",
-    "enzyme": "^2.4.1",
+    "enzyme": "^3.11.0",
     "eslint": "^3.15.0",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-config-loopback": "^4.0.0",
@@ -57,10 +56,21 @@
     "file-loader": "^0.11.2",
     "less": "^2.7.1",
     "less-plugin-autoprefix": "^1.5.1",
-    "mocha": "^3.0.2",
-    "react-addons-test-utils": "^15.6.0",
+    "mocha": "^9.1.3",
+    "react-addons-test-utils": "^15.3.2",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
-    "url-loader": "^0.5.9"
+    "url-loader": "^4.1.1",
+    "webpack": "^5.0.0-rc.6",
+    "webpack-cli": "^4.9.1"
+  },
+  "directories": {
+    "test": "test"
   }
+}
+	...
+	"scripts": {
+		"build": "webpack"
+	},
+	...
 }
