--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "webpack",
+  "name": "webpack-workshop",
   "version": "1.0.0",
   "description": "webpack workshop",
   "main": "server.js",
   "scripts": {
-    "build": "webpack --mode development",
+    "build": "webpack",
     "test": "npm run build && mocha test/.setup.js test/*.spec.js --exit",
     "start": "webpack && node server.js"
   },
@@ -61,16 +61,10 @@
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
     "url-loader": "^4.1.1",
-    "webpack": "^5.0.0-rc.6",
+    "webpack": "^5.61.0",
     "webpack-cli": "^4.9.1"
-  },
-  "directories": {
-    "test": "test"
   }
+
 }
-	...
-	"scripts": {
-		"build": "webpack"
-	},
-	...
-}
+	
+
